# fl

./: .clang-format  .gitignore  CMakeLists.txt
Docs/src/: Language-declaration.tex  preamble.tex
Docs/src/chapters/: Language syntax.tex  Purpose of creating a language.tex
src/: main.cpp
